[package]
name = "overseer"
version = "0.1.0"
authors = ["pinecone"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.4", features = ["framework", "standard_framework", "rustls_backend"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
config = "0.10.1"
serde = { version = "1.0.124", features = ["derive"] }
eyre = "0.6.5"
color-eyre = "0.5.10"
tracing = "0.1"
tracing-futures = "0.2.5"
tracing-log = { version = "0.1.2", features = ["env_logger"] }
tracing-subscriber = "0.2.17"
sqlx = { version = "0.5.1", features = [ "runtime-tokio-rustls", "postgres", "uuid",  ] }
regex = "1.4.5"